Fix download item when file name is too big to be shown

--- a/web/src/pages/index/style/blocks.css
+++ b/web/src/pages/index/style/blocks.css
@@ -92,6 +92,9 @@
     width: 100%;
     justify-content: center;
     margin-top: 0.5em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .download-item-info>.button-download {
